Fix mobile homepage option alignment

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -158,6 +158,7 @@ body {
         grid-row: 2;
         align-self: end;
         margin: auto 0 0 auto;
+        line-height: 0;
     }
 
     .takeaway {
